--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,80 @@
-.App {
+/* Influencers CSS */
+
+.influencer-div{
+  justify-content: center;;
+  margin: 0% 5% 0% 5%;
+  padding: 3%;
+}
+
+.influencer-div h1{
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.influencer{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
+  flex-direction: row;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding-top: 3%;
 }
 
-.App-link {
-  color: #61dafb;
+.influencer-info{
+  margin: 5px;
+  width: 328px;
+  height: 400px;
+  background-color: rgb(245, 243, 243);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.influencer-info img{
+  height: 180px;
+  display: block;
+  margin:25px auto 10px auto;
 }
+
+.influencer-info h3, p{
+  text-align: center;
+  margin: 20px 15px 0 15px;
+}
+
+.influencer-info a{
+  text-decoration: none;
+  color: black;
+}
+
+/* Team CSS */
+
+.team-div{
+  justify-content: center;;
+  margin: 0% 5% 2% 5%;
+  padding: 3%;
+}
+
+.team-div h1{
+  text-align: center;
+}
+
+.team{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  padding-top: 3%;
+}
+
+.team-info{
+  margin: 5px;
+  width: 220px;
+  background-color: rgb(245, 243, 243);
+}
+
+.team-info img{
+  height: 150px;
+  width: 200px;
+  display: block;
+  margin:10px auto 10px auto;
+}
+
+.team-info h4, h6{
+  text-align: center;
+}
+
