--- a/src/components/Homepage/AboutUs.css
+++ b/src/components/Homepage/AboutUs.css
@@ -4,6 +4,12 @@
 
 }
 
+.banner{
+    width: 100%;
+    height: 60%;
+    margin-bottom: 30px;
+}
+
 .details{
     margin-left:25%;
     margin-right:25%;
